# bellman-example2

./: Cargo.toml  filevkey_d2.txt
batch_file/: proof1_a.txt  proof1_b.txt  proof1_c.txt  proof1_uncompressed.json  proof2_a.txt  proof2_b.txt  proof2_c.txt  proof2_uncompressed.json  proof3_a.txt  proof3_b.txt  proof3_c.txt  proof3_uncompressed.json  vkey1_uncompressed.json  vkey2_uncompressed.json  vkey3_a.txt  vkey3_b1.txt  vkey3_b2.txt  vkey3_d1.txt  vkey3_d2.txt  vkey3_g.txt  vkey3_ic_1.txt  vkey3_ic_2.txt
file/: proof_a.txt  proof_b.txt  proof_c.txt  proof_uncompressed.json  vkey_a.txt  vkey_b1.txt  vkey_b2.txt  vkey_d1.txt  vkey_d2.txt  vkey_g.txt  vkey_ic_1.txt  vkey_ic_2.txt  vkey_ic_3.txt  vkey_uncompressed.json
src/: cid_mimc.rs  cid_mimc_test.rs  cube.rs  cube2.rs  cube_test.rs  eddsa.rs  encode.rs  encode_bit.rs  into_affine.rs  main.rs  mimc.rs  range_proof.rs  range_proof2.rs  redjubjub.rs  redjubjub_signature.rs  test.rs  test2.rs  vaccination-bit.rs  vaccination.rs  vaccination_bit.rs
