[package]
name = "bellman-example2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bellman = {package = "bellman_ce", version = "0.3", default-features = false}
# bellman = "0.13.1"
# rand = "0.8"
rand = "0.4"
# bls12_381 = "0.7"
# ff = "0.12"
sapling-crypto_ce = "0.1.3"
rand_xorshift = "0.2"
