[package]
name = "bellman-example2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# bellman = "0.13.1"
bellman = {package = "bellman_ce", version = "0.3.2"}
rand = "0.8"
rand_core = "0.6"
bls12_381 = "0.7"
ff = "0.12"
zcash_primitives = "0.9.0"
jubjub = "0.9"
group = { version = "0.12.1", features = ["wnaf-memuse"] }
